# lzma

./: .gitattributes  .gitignore  .prettierignore  .script-jail.lock.yml  .taplo.toml  .yarnrc.yml  CHANGELOG.md  Cargo.toml  README.md  browser-entry.d.ts  browser-entry.js  browser.js  index.d.ts  index.js  lzma.browser.d.ts  lzma.browser.js  lzma.d.ts  lzma.js  lzma.wasi-browser.js  lzma.wasi.cjs  lzma2.browser.d.ts  lzma2.browser.js  lzma2.d.ts  lzma2.js  main.js  package.json  renovate.json  stream-polyfill.js  stream-polyfill.mjs  tsconfig.json  xz.browser.d.ts  xz.browser.js  xz.d.ts  xz.js
.config/: config.toml
.github/workflows/: CI.yml  lint.yml
__test__/: buffer-free-polyfill.spec.ts  buffer-free-probe.mjs  helpers.ts  lzma.spec.ts  lzma2.spec.ts  node-stream-factory.spec.ts  streaming-class.spec.ts  streaming-cross-compat.spec.ts  streaming-robustness.spec.ts  streaming-web.spec.ts  xz.spec.ts
docs/superpowers/specs/: 2026-07-10-support-matrix-cards-design.md
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
plans/: 372-streaming-support.md
src/: backend.rs  lib.rs  stream.rs  stream_web.rs
