[package]
edition = "2018"
name    = "napi_rs_xz"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lzma-rs     = { version = "0.3", features = ["stream"] }
napi        = "3.0.0-alpha.7"
napi-derive = "3.0.0-alpha.5"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto           = true
